--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi All, I'm Elie WAZEN!</h1>
+				<p>Do not ask <em>i am the king</em> Galette des rois. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:eliergwazen@gmail.com">email</a></li>
+        		<li><a href="test">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
 	</body>
